relatorios/202210272/T4/compilador.txt
In file included from planilhas.cpp:5:
calculadora.hpp: In member function ‘T Calculadora<T>::calcula(T, T, char)’:
calculadora.hpp:52:29: error: ‘round’ is not a member of ‘std’
   52 |                 return std::round((float)a/(float)b);
      |                             ^~~~~
